--- a/my-app/src/style/Ai.css
+++ b/my-app/src/style/Ai.css
@@ -334,7 +334,6 @@
     .containerAi {
         width: 100%;
         height: 500px;
-        border-radius: 20px;
     }
 
     .robotAiTwo {
@@ -376,11 +375,12 @@
         flex-direction: column;
         align-items: stretch;
     }
-
+    .robotAiTwo{
+        display: none;
+    }
     .aiInp {
         width: 100%;
     }
-
     .user-message,
     .bot-message {
         max-width: 90%;
@@ -400,17 +400,12 @@
         flex-direction: column-reverse;
     }
 
-    .AiSection3 {
-        margin-top: -200px;
-    }
-
     .containerAi {
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.348);
     }
 
-    .container {
+    .containerAi {
         height: 400px;
-        border-radius: 15px;
     }
 
     .History {
@@ -431,16 +426,17 @@
         width: 50px;
         height: 50px;
         font-size: 16px;
-        margin-left: 82%;
+        margin-left: 86%;
     }
 
     .LogicMood {
-        margin-top: -850px;
+        margin-top: 50px;
     }
 
     .moodContainer {
         display: flex;
         flex-direction: column;
+        margin-bottom: -100px !important;
     }
 
     .Mood {
@@ -456,11 +452,10 @@
     }
 
     .aiText {
-        margin-top: -100px;
-        width: 200px !important;
+        display: none;
     }
 
-    .AiSection2 {
-        margin-top: 500px;
+    .AiSection3 {
+        margin-top: -300px;
     }
 }
