--- a/my-app/src/style/GoalPage.css
+++ b/my-app/src/style/GoalPage.css
@@ -598,7 +598,7 @@ body {
     padding: 60px 30px;
     box-shadow: none;
     border-radius: 60px;
-    
+    width: 300px;
   }
 
   .motivationContainer {
