--- a/my-app/src/style/GoalPage.css
+++ b/my-app/src/style/GoalPage.css
@@ -630,7 +630,7 @@ body {
 
   .taskCard {
     padding: 15px 20px;
-    width: 300px;
+    width: 300px !important;
   }
 
   .taskTitle {
@@ -642,7 +642,7 @@ body {
     width: 35px;
     height: 35px;
     font-size: 18px;
-    margin-right: 39px;
+    margin-right: 50px;
   }
 
   .progressText {
