--- a/my-app/src/style/GoalPage.css
+++ b/my-app/src/style/GoalPage.css
@@ -636,13 +636,15 @@ body {
   .taskTitle {
     font-size: 16px;
   }
-
+  .deleteIcon{
+    margin-right: 50px !important;
+  }
   .statusIcon,
   .deleteIcon {
     width: 35px;
     height: 35px;
     font-size: 18px;
-    margin-right: 50px;
+    margin-right: 30px;
   }
 
   .progressText {
