--- a/my-app/src/style/GoalPage.css
+++ b/my-app/src/style/GoalPage.css
@@ -637,7 +637,7 @@ body {
     font-size: 16px;
   }
   .deleteIcon{
-    margin-right: 50px !important;
+    margin-left: 50px;
   }
   .statusIcon,
   .deleteIcon {
