--- a/my-app/src/style/GoalPage.css
+++ b/my-app/src/style/GoalPage.css
@@ -406,7 +406,10 @@ body {
 .progressSvg {
   filter: drop-shadow(0 8px 20px rgba(21, 149, 56, 0.2));
 }
-
+.status{
+  display: flex;
+  flex-direction: row;
+}
 .progressText {
   position: absolute;
   display: flex;
@@ -644,7 +647,7 @@ body {
     font-size: 18px;
   }
   .status{
-    margin-right: 50px;
+    margin-right: 80px;
   }
   .progressText {
     font-size: 24px;
