--- a/my-app/src/style/GoalPage.css
+++ b/my-app/src/style/GoalPage.css
@@ -610,7 +610,7 @@ body {
     box-shadow: none;
     border-radius: 60px;
     margin-right: 34px;
-    width: auto;
+    width: 330px;
   }
 
   .motivationContainer {
