--- a/my-app/src/style/GoalPage.css
+++ b/my-app/src/style/GoalPage.css
@@ -647,10 +647,9 @@ body {
     width: 25px;
     height: 25px;
     font-size: 18px;
-    margin: 10px;
   }
   .status{
-    margin: 20px;
+    margin-right: 150px;
   }
   .progressText {
     font-size: 24px;
